# flash

./: .gitignore  Cargo.toml  LICENSE  build.sh  config.toml  install.sh  release.sh
releases/: flash-x86_64-unknown-linux-gnu
src/: compress.rs  config.rs  input.rs  lib.rs  loading.rs  main.rs  upload.rs
tests/: compress_tests.rs  input_tests.rs  upload_tests.rs
