[package]
name = "flash"
version = "0.2.0"
edition = "2021"
authors = ["Jackie Tsien <jackie10673311@gmail.com>"]
description = "A command-line tool for compressing and uploading files/folders to remote servers via SFTP"
license = "MIT"
repository = "https://github.com/Jackie733/flash"
keywords = ["compression", "upload", "sftp", "cli", "zip"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "flash"
path = "src/main.rs"

[lib]
name = "flash"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
ssh2 = "0.9"
indicatif = "0.18"
rpassword = "7.4.0"
anyhow = "1.0"
env_logger = "0.11.8"
toml = "0.9.2"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
zip = "4.3.0"
